# collatz

./: CMakeLists.txt  README.md
docs/: fix1.md  fix2.md  fix3.md  fix4.md  fix5.md
src/: BigBinary.h  Config.h  Helpers.h  main.cpp
tests/: BigBinaryTest.cpp  CMakeLists.txt
